Added Drive-Over Buttons
Just a basic proof of concept type thing.

--- a/Formula Fun/.godot/editor/script_editor_cache.cfg
+++ b/Formula Fun/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,43 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 64,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 9.0,
+"row": 10,
+"scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/Utils/Hover Area/hover_area.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 20,
+"row": 9,
+"scroll_position": 1.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/Menus/Main/PlayButton.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 20,
+"row": 12,
+"scroll_position": 2.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 12,
+"selection_to_column": 114,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
