--- a/Formula Fun/.godot/editor/editor_layout.cfg
+++ b/Formula Fun/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Entities/Car/car.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scenes/", "res://Scenes/Entities/", "res://Scenes/Entities/Car/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/icon.svg")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scenes/", "res://Scenes/Utils/", "res://Scenes/Utils/Hover Area/", "res://Scenes/Entities/", "res://Scenes/Entities/Car/", "res://Assets/", "res://Assets/Progress/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Entities/Car/car.tscn", "res://Scenes/Menus/Main/main_menu.tscn")
-current_scene="res://Scenes/Menus/Main/main_menu.tscn"
+open_scenes=PackedStringArray("res://Scenes/Menus/Main/main_menu.tscn", "res://Scenes/Entities/Car/car.tscn", "res://Scenes/Utils/Hover Area/hover_area.tscn")
+current_scene="res://Scenes/Entities/Car/car.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Entities/Car/car.gd", "res://Scenes/Entities/Car/Sprites.gd"]
-selected_script="res://Scenes/Entities/Car/car.gd"
+open_scripts=["res://Scenes/Entities/Car/car.gd", "res://Scenes/Utils/Hover Area/hover_area.gd", "res://Scenes/Entities/Car/Sprites.gd", "res://Scenes/Menus/Main/PlayButton.gd"]
+selected_script="res://Scenes/Utils/Hover Area/hover_area.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
